cmake_minimum_required(VERSION 3.22)
project(C C)

set(CMAKE_C_STANDARD 99)

add_executable(C main.c)
add_executable(01 01-5.25.c)
add_executable(02 02-5.25.c)
add_executable(03 03-5.25.c)
add_executable(04 04-5.25.c)
add_executable(05 05-5.27.c)
add_executable(06 06-5.27.c)
add_executable(07 07-5.29.c)
add_executable(08 08-5.29.c)